# dh-cpplox-old

./: .clang-tidy  .cmake-format.json  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: CompilerWarnings.cmake  ConfigureVcpkg.cmake  StaticAnalyzers.cmake  UpdateSubmodule.cmake
cmake/vcpkg-triplets/: wasm32-emscripten-local.cmake
src/: CMakeLists.txt  chunk.cpp  chunk.hpp  debug.cpp  debug.hpp  greeting.hpp  main.cpp  memory.cpp  memory.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
tests/: CMakeLists.txt  hello_tests.cpp  lox_tests.cpp
tools/: setup-emsdk.sh
